update cr2w.dll from Wkit

--- a/CP77.Common/CP77.Common.csproj
+++ b/CP77.Common/CP77.Common.csproj
@@ -16,6 +16,12 @@
 
   <ItemGroup>
     <PackageReference Include="Catel.Core" Version="5.12.11" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" />
+    <PackageReference Include="protobuf-net" Version="3.0.62" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Tools\" />
   </ItemGroup>
 
 </Project>
