--- a/CP77Tools/CP77Tools.csproj
+++ b/CP77Tools/CP77Tools.csproj
@@ -34,4 +34,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+    <Folder Include="Oodle\" />
+  </ItemGroup>
+
 </Project>
