--- a/CP77Tools/CP77Tools.csproj
+++ b/CP77Tools/CP77Tools.csproj
@@ -57,4 +57,8 @@
     </None>
   </ItemGroup>
 
+
+  <PropertyGroup Condition=" '$(OS)' == 'Windows_NT' ">
+	  <DefineConstants>_WINDOWS</DefineConstants>
+  </PropertyGroup>
 </Project>
