--- a/WolvenKit.Render/WolvenKit.Render.csproj
+++ b/WolvenKit.Render/WolvenKit.Render.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0-windows;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;netcoreapp3.1;net48</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
