--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -13,10 +13,14 @@ jobs:
     steps:
     - name: Checkout github repo (+ download lfs dependencies)
       uses: actions/checkout@v2
-      with:
-        lfs: true
-    - name: Checkout LFS objects
-      run: git lfs checkout
+    - name: Setup 7z with choco
+      with: |
+        choco install 7z -y
+    - name: Download libs for irrlicht
+      with: |
+        cd cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
+        wget https://outwa.it/lib.zip
+        7z  -y x lib.zip
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.0.5
       with:
