--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         choco install 7zip.install -y
     - name: Download libs for irrlicht
       run: |
-        cd cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
+        cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
         wget https://outwa.it/lib.zip
         7zip_x64.exe  -y x lib.zip
     - name: Setup Nuget.exe
