--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,15 @@ jobs:
     steps:
     - name: Checkout github repo (+ download lfs dependencies)
       uses: actions/checkout@v2
-    - name: Setup 7z with choco
+    - name: Setup 7z, wget with choco
       run: |
         choco install 7zip.install -y
+        choco install wget -y
     - name: Download libs for irrlicht
       run: |
         cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
         wget https://outwa.it/lib.zip
-        7zip_x64.exe  -y x lib.zip
+        7zip  -y x lib.zip
     - name: Setup Nuget.exe
       uses: NuGet/setup-nuget@v1.0.5
       with:
