--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
         wget https://outwa.it/lib.zip
-        7zip  -y x lib.zip
+        7z  -y x lib.zip
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.0.5
       with:
