--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -34,8 +34,8 @@ jobs:
       run: msbuild  WolvenKit.sln -p:Configuration=Release  -p:Platform=x64 -m
     - name: Zip Release
       run: |
-        cd $Env:GITHUB_WORKSPACE\\WolvenKit\bin
-        Compress-Archive -Path ./x64/Release/ -DestinationPath WolvenKit.zip
+        cd $Env:GITHUB_WORKSPACE\\WolvenKitUI\bin
+        Compress-Archive -Path ./Release/net5.0-windows/ -DestinationPath WolvenKit.zip
     - name: Deploy Nightly
       uses: Maxzor/deploy-nightly@v1.0.4
       env:
