--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -13,15 +13,11 @@ jobs:
     steps:
     - name: Checkout github repo (+ download lfs dependencies)
       uses: actions/checkout@v2
-    - name: Setup 7z, wget with choco
-      run: |
-        choco install 7zip.install -y
-        choco install wget -y
     - name: Download libs for irrlicht
       run: |
         cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
-        wget https://outwa.it/lib.zip
-        7z  -y x lib.zip
+        Invoke-WebRequest https://outwa.it/lib.zip -OutFile lib.zip
+        Expand-Archive lib.zip
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.0.5
       with:
