--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Download libs for irrlicht
       run: |
         cd $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\
-        Invoke-WebRequest https://outwa.it/lib.zip -OutFile lib.zip
+        Invoke-WebRequest https://outwa.it/lib.zip -OutFile $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\lib.zip
         Expand-Archive lib.zip
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.0.5
