--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -17,6 +17,8 @@ jobs:
       run: |
         Invoke-WebRequest https://outwa.it/lib.zip -OutFile $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\lib.zip
         Expand-Archive $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\lib.zip -DestinationPath $Env:GITHUB_WORKSPACE\\WolvenKit.Irrlicht\\ -Force
+        cd $Env:GITHUB_WORKSPACE\\
+        tree
     - name: Setup Nuget.exe
       uses: NuGet/setup-nuget@v1.0.5
       with:
