--- a/.github/workflows/Nightly.yml
+++ b/.github/workflows/Nightly.yml
@@ -37,6 +37,6 @@ jobs:
       with:
         upload_url: https://uploads.github.com/repos/Traderain/Wolven-kit/releases/11743470/assets{?name,label}
         release_id: 11743470
-        asset_path: ${{ $Env:GITHUB_WORKSPACE\\WolvenKit.zip }}
+        asset_path: WolvenKit.zip
         asset_name: WolvenKit-Nightly-$$.zip
         asset_content_type: application/zip
