Implement basic multi game project support
#286 #287

--- a/WolvenKitUI/WolvenKitUI.csproj
+++ b/WolvenKitUI/WolvenKitUI.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <UseWpf>true</UseWpf>
-    
+    <XamlDebuggingInformation>true</XamlDebuggingInformation>
     <ExtrasEnableImplicitWpfReferences>true</ExtrasEnableImplicitWpfReferences>
     <ExtrasEnableImplicitWinFormsReferences>true</ExtrasEnableImplicitWinFormsReferences>
   </PropertyGroup>
