--- a/WolvenKit.Console/WolvenKit.Console.csproj
+++ b/WolvenKit.Console/WolvenKit.Console.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0-windows;</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
