--- a/WolvenKit.Wwise/WolvenKit - Backup.Wwise.csproj
+++ b/WolvenKit.Wwise/WolvenKit - Backup.Wwise.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0-windows;net48</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;net48</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
