--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -4,28 +4,18 @@
     <AssemblyName>WolvenKit</AssemblyName>
     <RootNamespace>WolvenKit</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <UseWpf>true</UseWpf>
     <XamlDebuggingInformation>true</XamlDebuggingInformation>
     <ExtrasEnableImplicitWpfReferences>true</ExtrasEnableImplicitWpfReferences>
     <ExtrasEnableImplicitWinFormsReferences>true</ExtrasEnableImplicitWinFormsReferences>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <!-- Tools like SonarQube require a unique project guid -->
     <ProjectGuid>{1DD8B40B-2548-4663-B208-1D107EF47ACF}</ProjectGuid>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <StartupObject>WolvenKit</StartupObject>
+    <StartupObject />
     <NoWarn>$(NoWarn);SA1652</NoWarn>
     <ApplicationIcon>Wkit_Icon_Flattened_256x.ico</ApplicationIcon>
   </PropertyGroup>
 
-<ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\WolvenKit.Bundles\WolvenKit.Bundles.csproj" />
     <ProjectReference Include="..\WolvenKit.Cache\WolvenKit.Cache.csproj" />
     <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
@@ -34,138 +24,6 @@
     <ProjectReference Include="..\WolvenKit.W3Speech\WolvenKit.W3Speech.csproj" />
     <ProjectReference Include="..\WolvenKit.W3Strings\WolvenKit.W3Strings.csproj" />
     <ProjectReference Include="..\WolvenKit.Wwise\WolvenKit.Wwise.csproj" />
-  </ItemGroup>
-    <ItemGroup>
-    <None Remove="ManagerCache\__xbmdump_3768555366.csv" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="ManagerCache\__xbmdump_3768555366.csv">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ViewModels\Interfaces\" />
-    <Folder Include="ViewModels\Tools\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="Resources\Fonts\fontawesome-webfont.ttf" />
-    <None Remove="Resources\Icons\Logo.ico" />
-    <None Remove="Resources\Images\Files\apb_32x.png" />
-    <None Remove="Resources\Images\Files\BlankFile_16x.png" />
-    <None Remove="Resources\Images\Files\blend_32x.png" />
-    <None Remove="Resources\Images\Files\fbx_32x.png" />
-    <None Remove="Resources\Images\Files\FolderClosed_16x.png" />
-    <None Remove="Resources\Images\Files\FolderOpened_16x.png" />
-    <None Remove="Resources\Images\Files\image_32x.png" />
-    <None Remove="Resources\Images\Files\Project_Explorer_Base_Dir_16x.png" />
-    <None Remove="Resources\Images\Files\redcloth_32x.png" />
-    <None Remove="Resources\Images\Files\w2mesh_32x.png" />
-    <None Remove="Resources\Images\Files\xbm_32x.png" />
-    <None Remove="Resources\Images\Files\xml_32x.png" />
-    <None Remove="Resources\Images\Files\zip_32x.png" />
-    <None Remove="Resources\Images\git.png" />
-    <None Remove="Resources\Images\Preferences_light_64x.png" />
-    <None Remove="Resources\Images\RedEngine\bird.png" />
-    <None Remove="Resources\Images\RedEngine\csv.png" />
-    <None Remove="Resources\Images\RedEngine\detail.png" />
-    <None Remove="Resources\Images\RedEngine\env.png" />
-    <None Remove="Resources\Images\RedEngine\ExitIcon.png" />
-    <None Remove="Resources\Images\RedEngine\ExpandIcon.png" />
-    <None Remove="Resources\Images\RedEngine\fev.png" />
-    <None Remove="Resources\Images\RedEngine\journal.png" />
-    <None Remove="Resources\Images\RedEngine\LayerGroupVisibled.png" />
-    <None Remove="Resources\Images\RedEngine\redgame.png" />
-    <None Remove="Resources\Images\RedEngine\redswf.png" />
-    <None Remove="Resources\Images\RedEngine\spawntree.png" />
-    <None Remove="Resources\Images\RedEngine\swf.png" />
-    <None Remove="Resources\Images\RedEngine\vbrush.png" />
-    <None Remove="Resources\Images\RedEngine\w2ainfo.png" />
-    <None Remove="Resources\Images\RedEngine\w2am.png" />
-    <None Remove="Resources\Images\RedEngine\w2anim.png" />
-    <None Remove="Resources\Images\RedEngine\w2animev.png" />
-    <None Remove="Resources\Images\RedEngine\w2anims.png" />
-    <None Remove="Resources\Images\RedEngine\w2beh.png" />
-    <None Remove="Resources\Images\RedEngine\w2behtree.png" />
-    <None Remove="Resources\Images\RedEngine\w2blb.png" />
-    <None Remove="Resources\Images\RedEngine\w2brix.png" />
-    <None Remove="Resources\Images\RedEngine\w2cent.png" />
-    <None Remove="Resources\Images\RedEngine\w2comm.png" />
-    <None Remove="Resources\Images\RedEngine\w2conv.png" />
-    <None Remove="Resources\Images\RedEngine\w2cube.png" />
-    <None Remove="Resources\Images\RedEngine\w2cutscene.png" />
-    <None Remove="Resources\Images\RedEngine\w2ds.png" />
-    <None Remove="Resources\Images\RedEngine\w2dset.png" />
-    <None Remove="Resources\Images\RedEngine\w2ent.png" />
-    <None Remove="Resources\Images\RedEngine\w2expr.png" />
-    <None Remove="Resources\Images\RedEngine\w2f.png" />
-    <None Remove="Resources\Images\RedEngine\w2faces.png" />
-    <None Remove="Resources\Images\RedEngine\w2fnt.png" />
-    <None Remove="Resources\Images\RedEngine\w2goalcrv.png" />
-    <None Remove="Resources\Images\RedEngine\w2guidesc.png" />
-    <None Remove="Resources\Images\RedEngine\w2je.png" />
-    <None Remove="Resources\Images\RedEngine\w2job.png" />
-    <None Remove="Resources\Images\RedEngine\w2l.png" />
-    <None Remove="Resources\Images\RedEngine\w2mesh.png" />
-    <None Remove="Resources\Images\RedEngine\w2mg.png" />
-    <None Remove="Resources\Images\RedEngine\w2mi.png" />
-    <None Remove="Resources\Images\RedEngine\w2p.png" />
-    <None Remove="Resources\Images\RedEngine\w2phase.png" />
-    <None Remove="Resources\Images\RedEngine\w2pr.png" />
-    <None Remove="Resources\Images\RedEngine\w2ps.png" />
-    <None Remove="Resources\Images\RedEngine\w2qlog.png" />
-    <None Remove="Resources\Images\RedEngine\w2quest.png" />
-    <None Remove="Resources\Images\RedEngine\w2rag.png" />
-    <None Remove="Resources\Images\RedEngine\w2ragdoll.png" />
-    <None Remove="Resources\Images\RedEngine\w2react.png" />
-    <None Remove="Resources\Images\RedEngine\w2rig.png" />
-    <None Remove="Resources\Images\RedEngine\w2rigm.png" />
-    <None Remove="Resources\Images\RedEngine\w2sbnk.png" />
-    <None Remove="Resources\Images\RedEngine\w2scene.png" />
-    <None Remove="Resources\Images\RedEngine\w2spwn.png" />
-    <None Remove="Resources\Images\RedEngine\w2steer.png" />
-    <None Remove="Resources\Images\RedEngine\w2surf.png" />
-    <None Remove="Resources\Images\RedEngine\w2w.png" />
-    <None Remove="Resources\Images\RedEngine\worldmap.png" />
-    <None Remove="Resources\Svg\case-sensitive.svg" />
-    <None Remove="Resources\Svg\Close_16x.svg" />
-    <None Remove="Resources\Svg\Close_red_16x.svg" />
-    <None Remove="Resources\Svg\CollapseAll_16x.svg" />
-    <None Remove="Resources\Svg\CollapseChevronUpGroup_16x.svg" />
-    <None Remove="Resources\Svg\EventLog_16x.svg" />
-    <None Remove="Resources\Svg\ExpandAll_16x.svg" />
-    <None Remove="Resources\Svg\ExpandChevronDownGroup_16x.svg" />
-    <None Remove="Resources\Svg\ImportFile_16x.svg" />
-    <None Remove="Resources\Svg\ImportTheme_16x.svg" />
-    <None Remove="Resources\Svg\Method_16x.svg" />
-    <None Remove="Resources\Svg\Method_left_16x.svg" />
-    <None Remove="Resources\Svg\MoveToSubmodule2_16x.svg" />
-    <None Remove="Resources\Svg\MoveToSubmodule_16x.svg" />
-    <None Remove="Resources\Svg\NewFile_16x.svg" />
-    <None Remove="Resources\Svg\NewSolutionFolder_16x.svg" />
-    <None Remove="Resources\Svg\OpenFile_16x.svg" />
-    <None Remove="Resources\Svg\OpenFolder_16x.svg" />
-    <None Remove="Resources\Svg\PackageProperty_16x.svg" />
-    <None Remove="Resources\Svg\PlaybackPreview_16x.svg" />
-    <None Remove="Resources\Svg\Property_left_16x.svg" />
-    <None Remove="Resources\Svg\PushpinOutlineAngle_16x.svg" />
-    <None Remove="Resources\Svg\regex.svg" />
-    <None Remove="Resources\Svg\RunTest_16x.svg" />
-    <None Remove="Resources\Svg\Run_16x.svg" />
-    <None Remove="Resources\Svg\SearchFolderClosed_16x.svg" />
-    <None Remove="Resources\Svg\SelectAllItems_inversed_16x.svg" />
-    <None Remove="Resources\Svg\SelectInverseItems_inversed_16x.svg" />
-    <None Remove="Resources\Svg\SelectNoItems_inversed_16x.svg" />
-    <None Remove="Resources\Svg\SelectObject_16x.svg" />
-    <None Remove="Resources\Svg\Settings_16x.svg" />
-    <None Remove="Resources\Svg\SQLServerObjectExplorer_16x.svg" />
-    <None Remove="Resources\Svg\TypeDefinition_16x.svg" />
-    <None Remove="Resources\Svg\UploadFile_16x.svg" />
-    <None Remove="Resources\Svg\whole-word.svg" />
-    <None Remove="Resources\Svg\WK_Logo.svg" />
-    <None Remove="Resources\Svg\ZoomOriginalSize_16x.svg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -201,19 +59,17 @@
     <PackageReference Include="Orchestra.Shell.Ribbon.Fluent" Version="6.2" />
     <PackageReference Include="SharpVectors.Reloaded" Version="1.7.1" />
 	  <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
+	  <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
     <PackageReference Include="WpfAnalyzers" Version="3.5.2" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
-
-  <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
   
-  <!-- Fallback code in case repository template is not found, code below can be removed when the repository template files are used -->
   <ItemGroup>
+    <Content Include="ManagerCache\__xbmdump_3768555366.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\AvalonDock.Layout.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -321,12 +177,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Fonts\fontawesome-webfont.ttf" />
     <Resource Include="Resources\Icons\Logo.ico" />
     <Resource Include="Resources\Images\Files\apb_32x.png" />
@@ -420,27 +270,8 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="Properties\Resources.Designer.cs">
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Update="Properties\Settings.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Page Update="Views\ImportView.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
-    </Page>
-    <Page Update="Views\PropertiesView.xaml">
-      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+    <Page Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
 </Project>
