--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -30,12 +30,16 @@
     <PackageReference Include="Catel.Core" Version="5.12.11" />
     <PackageReference Include="Catel.MVVM" Version="5.12.11" />
     <PackageReference Include="Catel.Fody" Version="4.5.0" PrivateAssets="all" />
+    <PackageReference Include="Crc32.NET" Version="1.2.0" />
     <PackageReference Include="Dirkster.AvalonDock" Version="4.50.0" />
     <PackageReference Include="Dirkster.AvalonDock.Themes.VS2013" Version="4.50.0" />
+    <PackageReference Include="doboz4net" Version="1.0.1" />
     <PackageReference Include="Fody" Version="6.3.0" PrivateAssets="all" />
     <PackageReference Include="CsvHelper" Version="16.1.0" />
     <PackageReference Include="Dirkster.MLib" Version="1.3.1.2" />
     <PackageReference Include="FastMember" Version="1.5.0" />
+    <PackageReference Include="ini-parser" Version="2.5.2" />
+    <PackageReference Include="MarkerMetro.Unity.Ionic.Zlib" Version="2.0.0.14" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Orc.CommandLine" Version="4.0.0" />
@@ -46,6 +50,7 @@
     <PackageReference Include="Pfim" Version="0.9.1" />
     <PackageReference Include="protobuf-net" Version="3.0.62" />
     <PackageReference Include="SharpZipLib" Version="1.3.1" />
+    <PackageReference Include="Snappy.NET" Version="1.1.1.8" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     <PackageReference Include="LoadAssembliesOnStartup.Fody" Version="4.5.0">
       <PrivateAssets>all</PrivateAssets>
