Update publishing settings

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ Wolven-kit.wiki
 WolvenKit.IrrlichtLime/Debug-x64
 WolvenKit.IrrlichtLime/Release-x64
 Libs/Irrlicht.dll
+WolvenKit.IrrlichtLime/Release-x86
