--- a/Wolvenkit.Cyberpunk/CP77.CR2W/CP77.CR2W.csproj
+++ b/Wolvenkit.Cyberpunk/CP77.CR2W/CP77.CR2W.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,6 +20,10 @@
     <PackageReference Include="FastMember" Version="1.5.0" />
     <PackageReference Include="FastMember.NetCore" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\WolvenKit.Common\WolvenKit.Common.csproj" />
   </ItemGroup>
 
 </Project>
