--- a/Wolvenkit.Cyberpunk/CP77Tools/CP77Tools.csproj
+++ b/Wolvenkit.Cyberpunk/CP77Tools/CP77Tools.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <AssemblyVersion>0.1.4.1</AssemblyVersion>
     <FileVersion>0.1.4.1</FileVersion>
     <DefineConstants Condition=" '$(OS)' == 'Windows_NT' ">IS_WINDOWS_BUILD</DefineConstants>
