--- a/Wolvenkit.Cyberpunk/CP77.MSTests/Wolvenkit.Tests.csproj
+++ b/Wolvenkit.Cyberpunk/CP77.MSTests/Wolvenkit.Tests.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\WolvenKit.Common\WolvenKit.Common.csproj" />
-    <ProjectReference Include="..\CP77.CR2W\CP77.CR2W.csproj" />
+    <ProjectReference Include="..\CP77.CR2W\WolvenKit.Cyberformats.csproj" />
   </ItemGroup>
 
   <ItemGroup>
