--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -44,7 +44,7 @@ jobs:
       with:
         upload_url: https://uploads.github.com/repos/WolvenKit/CP77Tools/releases/36017823/assets # find out this value by opening https://api.github.com/repos/<owner>/<repo>/releases in your browser and copy the full "upload_url" value including the {?name,label} part
         release_id: 36017823
-        asset_path: ./nightly.zip
-        asset_name: nightly.zip
+        asset_path: nightly.zip
+        asset_name: cp77tools-nightly-$$.zip
         asset_content_type: application/zip
         max_releases: 7    
