--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -37,8 +37,7 @@ jobs:
         files: ./CP77Tools/bin/Release/net5.0
         dest: nightly.zip
     - name: Deploy Nightly
-      id: upload-release-asset 
-      uses: Maxzor/deploy-nightly@v1.0.4
+      uses: WebFreak001/deploy-nightly@v1.1.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -47,4 +46,3 @@ jobs:
         asset_path: nightly.zip
         asset_name: cp77tools-nightly-$$.zip
         asset_content_type: application/zip
-        max_releases: 7    
