--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -50,6 +50,7 @@
     <PackageReference Include="MarkerMetro.Unity.Ionic.Zlib" Version="2.0.0.14" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.19" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Octokit" Version="0.48.0" />
     <PackageReference Include="Orc.CommandLine" Version="4.0.0" />
     <PackageReference Include="Orc.FileSystem" Version="4.1.1" />
     <PackageReference Include="Orc.Notifications" Version="4.0.0" />
