--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -296,5 +296,6 @@
     <Folder Include="Resources\Styles\Custom\" />
     <Folder Include="ViewModels\HomePage\Pages\" />
     <Folder Include="Views\HomePage\Pages\" />
+    <Folder Include="Views\Wizards\WizardPages\ProjectWizard\" />
   </ItemGroup>
 </Project>
