--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -294,7 +294,9 @@
   <ItemGroup>
     <Folder Include="Resources\Styles\CustomBase\" />
     <Folder Include="Resources\Styles\Custom\" />
-    <Folder Include="ViewModels\HomePage\Pages\" />
-    <Folder Include="Views\HomePage\Pages\" />
+    <Folder Include="ViewModels\Wizards\WizardPages\ThemeWizard\" />
+    <Folder Include="ViewModels\Wizards\WizardPages\UserWizard\" />
+    <Folder Include="Views\Wizards\WizardPages\ThemeWizard\" />
+    <Folder Include="Views\Wizards\WizardPages\UserWizard\" />
   </ItemGroup>
 </Project>
