--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -19,12 +19,6 @@ jobs:
         dotnet-version: 5.0.100
     - name: Install dependencies
       run: dotnet restore
-    - uses: suisei-cn/actions-download-file@v1
-      id: oo2core_8_win64  # Remember to give an ID if you need the output
-      name: Download the file
-      with:
-        url: "https://cdn.discordapp.com/attachments/786130090102358017/786130170720682024/oo2core_8_win64.dll"
-        target: ./CP77Tools/
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Upload a Build Artifact
@@ -36,13 +30,22 @@ jobs:
       with:
         files: ./CP77Tools/bin/Release/net5.0
         dest: nightly.zip
-    - name: Deploy Nightly
-      uses: WebFreak001/deploy-nightly@v1.1.0
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: https://uploads.github.com/repos/WolvenKit/CP77Tools/releases/36240873/assets{?name,label} # find out this value by opening https://api.github.com/repos/<owner>/<repo>/releases in your browser and copy the full "upload_url" value including the {?name,label} part
-        release_id: 36240873
-        asset_path: nightly.zip
-        asset_name: cp77tools-nightly-$$.zip
+        tag_name: commit-${{ github.sha }}
+        draft: true
+        prerelease: true
+    - name: Upload Nightly Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+        asset_path: ./nightly.zip
+        asset_name: nightly.zip
         asset_content_type: application/zip
