--- a/WolvenKit/WolvenKit.csproj
+++ b/WolvenKit/WolvenKit.csproj
@@ -296,5 +296,6 @@
   <ItemGroup>
     <Folder Include="Resources\Styles\CustomBase\" />
     <Folder Include="Resources\Styles\Custom\" />
+    <Folder Include="Views\PluginManager\" />
   </ItemGroup>
 </Project>
