--- a/WolvenKit.Common/WolvenKit.Common.csproj
+++ b/WolvenKit.Common/WolvenKit.Common.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <TargetFrameworks>net5.0-windows</TargetFrameworks>
     <Platforms>AnyCPU;x64</Platforms>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Description>Core functionality for the WolvenKit Mod Editor.</Description>
+    <Authors>Hambalkó Bence, Moritz Baron</Authors>
+    <Company>WolvenKit</Company>
+    <PackageProjectUrl>https://github.com/WolvenKit/Wolven-kit</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>wolvenkit</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
