--- a/CP77.CR2W/WolvenKit.Cyberformats.csproj
+++ b/CP77.CR2W/WolvenKit.Cyberformats.csproj
@@ -2,6 +2,15 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0-windows</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Hambalkó Bence, Moritz Baron</Authors>
+		<Company>WolvenKit</Company>
+		<Description>File formats (Cyberpunk 2077) for the WolvenKit Mod Editor.</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/WolvenKit/Wolven-kit</PackageProjectUrl>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
+		<PackageTags>wolvenkit, cyberpunk2077</PackageTags>
 	</PropertyGroup>
 
 	<ItemGroup>
