--- a/CP77.CR2W/WolvenKit.Cyberformats.csproj
+++ b/CP77.CR2W/WolvenKit.Cyberformats.csproj
@@ -13,6 +13,7 @@
 		<PackageTags>wolvenkit, cyberpunk2077</PackageTags>
 		<AssemblyVersion>1.0.1.0</AssemblyVersion>
 		<FileVersion>1.0.1.0</FileVersion>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
