Remote cp77tools and bugfixes (#301)
* Initial commit

* Create README.md

* better filenames

* .gitignore apply

* v0.1.0.1

- dump option
- fixes

* fix extraction and decompression

* version + oodle

* Update README.md

* Update README.md

* remove unneccesary files

* .gitignore is now working

* Hash finally found (#2)

- Better memory management (don't load all file in ram in unpacking process)
- Added optional extension for files
- Some fields renamed
- Added KARK detection
- Some improvements on files extracting
- Added SHA1Hash by Snazz#3248

* Multithreaded extracting + console progress bars

* Filetime

* Update README.md

* Update README.md

* extraction refactor

* Update README.md

* import tw3 filetypes

* version upgrade

* dump strings from archive

* actions

* derp

* more dump options

* more dump options. cleanup

* Github actions (#4)

* Github actions

* Cleaned

* multithreaded dump

* Update README.md

* whoops

* gitattributes

* Update OodleLZ.cs

* Update README.md

* Update OodleLZ.cs

* System.Commandline

- much better command line help and syntax

* extraction output directory

* extract with filenames

* log

* dump class layout

* Update CR2WExport.cs

- now also includes offset

* more CLI options

- more cli options and descriptions
- archive refactor

* write buffers instead of appending

* better buffer extraction

* cp77 cbitmap support

* texture extraction

* better extraction, texture types

* fix build

- version update

* more hashes

* fix cr2w info dumps

* more hashes

* update cr2w.dll from Wkit

* better json dumps

* version + readme

* better texture extraction

* fix typo

* better texture support

* add oodle tools

* Create Multilayer_Mask.cs

* fixes

* update readme

* fix dump task

* mltemplate support

- pretty json dump

* Local Commit

* Revert "Local Commit

--- a/CP77.CR2W/WolvenKit.Cyberformats.csproj
+++ b/CP77.CR2W/WolvenKit.Cyberformats.csproj
@@ -2,6 +2,18 @@
 
 	<PropertyGroup>
 		<TargetFramework>net5.0-windows</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Hambalkó Bence, Moritz Baron</Authors>
+		<Company>WolvenKit</Company>
+		<Description>File formats (Cyberpunk 2077) for the WolvenKit Mod Editor.</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageProjectUrl>https://github.com/WolvenKit/Wolven-kit</PackageProjectUrl>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/WolvenKit/Wolven-kit</RepositoryUrl>
+		<PackageTags>wolvenkit, cyberpunk2077</PackageTags>
+		<AssemblyVersion>1.0.1.0</AssemblyVersion>
+		<FileVersion>1.0.1.0</FileVersion>
+		<Version>1.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
