--- a/CP77.CR2W/WolvenKit.Cyberformats.csproj
+++ b/CP77.CR2W/WolvenKit.Cyberformats.csproj
@@ -17,16 +17,6 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Remove="Resources\archivehashes.zip" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Content Include="Resources\archivehashes.zip">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-
-	<ItemGroup>
 		<PackageReference Include="Catel.Core" Version="5.12.11" />
 		<PackageReference Include="DotNetHelper.FastMember.Extension" Version="2.0.0" />
 		<PackageReference Include="FastMember" Version="1.5.0" />
@@ -36,6 +26,10 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\WolvenKit.Common\WolvenKit.Common.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\" />
 	</ItemGroup>
 
 </Project>
