remaining warnings wip

--- a/WolvenKit.Save/WolvenKit.Save.csproj
+++ b/WolvenKit.Save/WolvenKit.Save.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0-windows</TargetFrameworks>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
@@ -38,7 +38,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LZ4PCL" Version="1.0.0" />
+    <PackageReference Include="LZ4PCL" Version="1.0.0" NoWarn="NU1701" />
   </ItemGroup>
 
 
